<?xml version="1.0" encoding="utf-8"?>
<!-- optimized for GT-S7582 & Nexus S -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.example.android.singlescreenapp.MainActivity" >

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" >

        <!-- TODO change mklogo to transparent png -->
        <ImageView
            android:id="@+id/mklogo_img_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:adjustViewBounds="true"
            android:maxHeight="55dp"
            android:src="@drawable/mklogo" />

        <ImageView
            android:id="@+id/ibbplogo_img_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:adjustViewBounds="true"
            android:maxHeight="25dp"
            android:src="@drawable/ibbp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/ibbp_img_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ibbp_pic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical" >

        <!-- contact -->
        <TextView
            android:id="@+id/contact_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:text="@string/contact"
            android:textAppearance="@style/MK_font"
            android:textColor="@color/MK_lblue"
            android:textSize="16sp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/map_img_view"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_map_24dp" />

            <TextView
                android:id="@+id/map_txt_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:text="@string/location"
                android:textAppearance="@style/MK_font"
                android:textColor="@color/MK_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- separator line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/MK_lblue" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/phone_img_view"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_phone_24dp" />

            <TextView
                android:id="@+id/phone_txt_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:text="@string/phone"
                android:textAppearance="@style/MK_font"
                android:textColor="@color/MK_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- separator line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/MK_lblue" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/email_img_view"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_email_24dp" />

            <TextView
                android:id="@+id/email_txt_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:text="@string/email"
                android:textAppearance="@style/MK_font"
                android:textColor="@color/MK_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- separator line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/MK_lblue" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/www_img_view"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_web_24dp" />

            <TextView
                android:id="@+id/wwww_txt_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:text="@string/www"
                android:textAppearance="@style/MK_font"
                android:textColor="@color/MK_gray"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
